<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:padding="5dp">

    <TextView
        android:id="@+id/newTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/homework_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/micro_text"/>

    <EditText
        android:id="@+id/newTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:inputType="textCapSentences"/>

    <TextView
        android:id="@+id/newSubjectText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/homework_subject"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/micro_text"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <AutoCompleteTextView
            android:id="@+id/newSubject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="10"
            android:ems="10"
            android:inputType="textCapSentences"/>

        <ImageButton
            android:id="@+id/color_picker_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="15dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/newDateDueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/homework_date_due"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/micro_text"/>

    <TextView
        android:id="@+id/viewDate"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@drawable/date_picker_click"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/newNotesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/homework_notes"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/micro_text"/>

    <EditText
        android:id="@+id/newNotes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:gravity="start"
        android:inputType="textCapSentences|textMultiLine"
        android:minHeight="100dp"/>

    <TextView
        android:id="@+id/newRemindText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/homework_remind_me"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/micro_text"/>

</LinearLayout>